--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build --turbopack",
     "dev": "next dev --turbopack",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write . --cache"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -67,6 +68,7 @@
     "@types/react-dom": "^19.2.3",
     "babel-plugin-react-compiler": "^1.0.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.8.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "1.4.0",
     "typescript": "^5.9.3"
